image and para added in home page

--- a/index.html
+++ b/index.html
@@ -7,5 +7,15 @@
   </head>
   <body>
     <h1>Home Page</h1>
+    <img
+      src="https://cdn.pixabay.com/photo/2023/07/21/22/49/sunflower-bud-8142430_640.jpg"
+      alt=""
+    />
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus
+      beatae doloremque mollitia dolore, assumenda dolorem rerum animi, laborum
+      asperiores molestiae totam. Pariatur nisi eaque aperiam officiis molestiae
+      cum quod facilis!
+    </p>
   </body>
 </html>
