row and col added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
+      <div class="container">
         <a class="navbar-brand" href="#">Navbar</a>
         <button
           class="navbar-toggler"
@@ -61,17 +61,29 @@
       </div>
     </nav>
     <!-- Navbar End -->
-    <h1>Home Page</h1>
-    <img
-      src="https://cdn.pixabay.com/photo/2023/07/21/22/49/sunflower-bud-8142430_640.jpg"
-      alt=""
-    />
-    <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus
-      beatae doloremque mollitia dolore, assumenda dolorem rerum animi, laborum
-      asperiores molestiae totam. Pariatur nisi eaque aperiam officiis molestiae
-      cum quod facilis!
-    </p>
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8">
+            <h1>Home Page</h1>
+
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Voluptatibus beatae doloremque mollitia dolore, assumenda dolorem
+              rerum animi, laborum asperiores molestiae totam. Pariatur nisi
+              eaque aperiam officiis molestiae cum quod facilis!
+            </p>
+          </div>
+          <div class="col-md-4">
+            <img
+              class="img-fluid"
+              src="https://cdn.pixabay.com/photo/2023/07/21/22/49/sunflower-bud-8142430_640.jpg"
+              alt=""
+            />
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
