--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </div>
     </nav>
     <!-- Navbar End -->
-    <section>
+    <section class="py-5">
       <div class="container">
         <div class="row">
           <div class="col-md-8">
